No longer add permgen param in Java 1.8+. New GC params at 4GB+.
When 4GB is allocated, we will use the Concurrent Mark Sweep GC in java
1.6 and the G1 GC in Java 1.7+.